--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@
     --fontSize:14px;
 }
 
-html{font-family:var(--fontType);}
-body{margin:0px;font-size:var(--fontSize);height:100vh;}
+html{font-family:var(--fontType);width:100%;height:100%;}
+body{margin:0px;font-size:var(--fontSize);width:100%;height:100%;}
 ul li, ol li{list-style-type:none;}
 input, select{font-family:var(--fontType);background-color:transparent;padding:5px;border:none;}
+input::placeholder{color:#cccccc;}
 input:focus, select:focus{outline:none;}
 
 .hide{display:none;}
@@ -21,6 +22,9 @@ nav{height:50px;width:100%;z-index:10000;background-color:#ffffff;color:#ffffff;
 nav .header{display:flex;flex-direction:row;height:100%;margin:0;padding:0;background-color:var(--baseColor);}
 nav .header li.left{flex-shrink:0;width:50px;padding:15px 0px;background-color:#0b2c38;text-align:center;}
 nav .header li.middle{flex-grow:1;padding:10px 20px;text-align:center;}
+nav .header li.middle.back{text-align:left;}
+nav .header li.middle.back:hover{color:var(--pointColor);}
+nav .header li.middle.back span{line-height:30px;cursor:pointer;}
 nav .header li.middle input{border-bottom:1px solid #ffffff;width:400px;color:#ffffff;}
 nav .header li.middle input::placeholder{color:#ffffff90;}
 nav .header li.right{flex-shrink:0;padding:10px 20px;display:flex;align-items:center;border-left:1px solid #ffffff30;}
@@ -29,16 +33,16 @@ nav .dropdown{position:absolute;background-color:#ffffff;min-width:160px;overflo
 nav .dropdown a{color:#000;padding:12px;text-decoration:none;display:block}
 nav .dropdown a:hover{background-color:#00000005}
 
-.container{height:inherit;}
-.container .main{width:100%;height:100%;background-color:#f0f0f0;}
+.container{height:inherit;overflow:hidden;}
+.container .main{width:inherit;height:inherit;background-color:#f0f0f0;}
 .container .main .menu{flex:0 0 auto;width:50px;text-align:center;z-index:9999;background-color:#ffffff;box-shadow:0 2px 2px 0 #00000014, 0 3px 1px -2px #00000020, 0 1px 5px 0 #00000012;}
 .container .main .menu a{display:block;width:50px;}
 .container .main .menu span{color:var(--fontColor);}
 .container .main .menu .items{padding:0;margin:0;}
 .container .main .menu .items li{padding:12px 0;cursor:pointer;}
 .container .main .menu .items li.selected{border-left:4px solid #2f7dca;}
-.container .main .contents{height:100%;display:flex;/*padding:60px 10px 10px 60px;*/color:var(--fontColor);}
-.container .main .contents .dashbd{margin:9px;flex:1 1 auto;}
+.container .main .contents{height:inherit;display:flex;/*padding:60px 10px 10px 60px;*/color:var(--fontColor);z-index:1;}
+.container .main .contents .dashbd{height:inherit;margin:9px;flex:1 1 auto;}
 .container .main .contents .dashbd select.name{border-bottom:none;font-size:17px;color:var(--fontColor);}
 .container .main .contents .dashbd ul.grid{display:flex;flex-direction:row;flex-wrap:wrap;padding-left:10px;}
 .container .main .contents .dashbd ul.grid li{display:inline-block;width:530px;}
@@ -51,65 +55,47 @@ nav .dropdown a:hover{background-color:#00000005}
 .container .main .contents .dashbd ul.grid li .widget .widget-header div span{cursor:pointer;padding:5px;}
 .container .main .contents .dashbd ul.grid li .widget .widget-header div span{color:var(--fontColor);}
 .container .main .contents .dashbd ul.grid li .widget .widget-header div span.fa-pen{color:var(--pointColor);}
-
 .container .main .contents .dashbd .widget-content{height:300px;}
-.container .main .contents .dashbd.editmode{display:flex;}
-.container .main .contents .dashbd.editmode .widget-content{height:50%;flex:2 2 auto;}
-.container .main .contents .dashbd.editmode .panel-left{flex:1 1 auto;width:250px;}
-.container .main .contents .dashbd.editmode .panel-right{flex:1 1 auto;width:250px;}
-
 
 .container .main .contents .widget-button .add-widget{z-index:9999;position:absolute;bottom:30px;right:30px;width:50px;height:50px;background-color:var(--pointColor);border-radius:50%;cursor:pointer;}
 .container .main .contents .widget-button .add-widget span{font-size:18px;color:#ffffff;padding:16px 17px;}
 
-/*
+.container .main .contents .editmode{margin:0px !important;}
+.container .main .contents .editmode .widget-content{height:460px;width:calc(100% - 520px);float:left;margin:9px;}
+.container .main .contents .editmode .panel{width:250px;background-color:#ffffff;float:right;height:inherit;border-left:1px solid #eeeeee;}
+.container .main .contents .editmode .panel .panel-title{font-weight:bold;font-size:15px;padding:20px 20px 15px 20px;}
+.container .main .contents .editmode .panel .panel-subtitle{font-weight:bold;font-size:13px;cursor:pointer;padding:10px 25px;}
+.container .main .contents .editmode .panel .panel-subtitle span.fas{float:right;padding-top:5px;cursor:pointer;}
+.container .main .contents .editmode .panel .panel-contents input,
+.container .main .contents .editmode .panel .panel-contents select{border-bottom:1px solid #434343;}
+.container .main .contents .editmode .panel .panel-contents input:focus,
+.container .main .contents .editmode .panel .panel-contents select:focus{outline:none;}
+.container .main .contents .editmode .panel .panel-contents ul{margin:0px;font-size:13px;padding:0 30px;}
+.container .main .contents .editmode .panel .panel-contents ul li{padding:3px;cursor:pointer;}
+.container .main .contents .editmode .panel .panel-contents ul li .fas{color:#555;}
+.container .main .contents .editmode .panel .panel-contents ul li span.data-field{margin-left:5px;}
+.container .main .contents .editmode .panel .panel-contents ul li span.option-field{margin-left:5px;}
+.container .main .contents .editmode .panel .panel-contents ul li ul.nested{font-size:11px;padding-left:0px;padding-right:0px;}
+.container .main .contents .editmode .panel .panel-contents ul li ul.nested li{padding-left:20px;}
+.container .main .contents .editmode .panel .panel-contents ul li ul.nested li.selected{background-color:#b2ebf270;}
+.container .main .contents .editmode .panel .panel-contents{/*margin-bottom:20px;*/}
+.container .main .contents .editmode .panel .panel-contents .contents-search{margin:0 25px 10px 25px;}
+.container .main .contents .editmode .panel .panel-contents .contents-list.top-list{overflow:auto;max-height:300px;}
+.container .main .contents .editmode .panel .panel-contents .contents-list.format{overflow:auto;max-height:50px;}
+.container .main .contents .editmode .panel .panel-contents .contents-list.measure li{margin:3px;}
+.container .main .contents .editmode .panel .panel-contents .contents-list.measure li.selected{background-color:#b2ebf270;}
+.container .main .contents .editmode .panel .panel-contents .contents-list .filter select, input{border-color:#444;width:90%;}
+.container .main .contents .editmode .panel .panel-contents .contents-list .filter label{font-size:10px;color:#444;}
+.container .main .contents .editmode .panel .panel-contents .contents-list .filter div{margin:20px 5px 10px 5px;}
+.container .main .contents .editmode .panel .panel-contents .contents-list .filter div input.startDate{margin-bottom:10px;}
+.container .main .contents .editmode .panel .panel-contents .contents-list .filter.date-filter{margin:3px;padding:3px 10px;border:1px dashed #dddddd;border-radius:3px;}
+.container .main .contents .editmode .panel .panel-grip{text-align:center;color:#ddd;height:20px;cursor:n-resize;margin:0 10px;padding:20px 0 15px 0;}
+.container .main .contents .editmode .panel .panel-grip h2{border-bottom:1px solid #ccc;margin:0px 10px 10px 10px;}
+.container .main .contents .editmode .panel .panel-contents.contents-table{padding:0 30px;max-height:120px;overflow:auto;}
+.container .main .contents .editmode .panel .panel-contents.contents-table ul{display:flex;}
+.container .main .contents .editmode .panel .panel-contents.contents-table ul li{width:40px;height:30px;}
+.container .main .contents .editmode .panel .panel-contents.contents-table ul li img{width:30px;}
 
-.container .main .contents.edit-mode{display:none;}
-.container .main .contents.edit-mode .widget-edit-mode{display:flex;flex-direction:row;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-content .search-date{background-color:#ffffff;padding:5px 10px 10px 5px;text-align:right;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-content .search-date label{font-size:10px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-content .search-date input::placeholder{color:#cccccc;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-content{flex-grow:1;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel{flex-shrink:0;width:510px;display:flex;flex-direction:row;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-data-field{margin-left:10px;width:250px;background-color:#ffffff;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-visual{width:250px;background-color:#ffffff;}
-
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel input,
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel select{width:100%;font-size:12px;padding:5px;border-top:none;border-right:none;border-left:none;border-bottom:1px solid #434343;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel input:focus,
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel select:focus{outline:none;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel h2{border-bottom:1px solid #ccc;margin:10px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul{margin:0px;font-size:13px;padding:0 30px;!*max-height:80%;overflow:auto;*!}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li{padding:3px;cursor:pointer;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li .fas{color:#555;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li span.data-field{margin-left:5px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li span.option-field{margin-left:5px;!*font-size:12px;*!}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li ul.nested{font-size:11px;padding-left:0px;padding-right:0px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li ul.nested li{padding-left:20px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li ul.nested li.selected{background-color:#b2ebf2;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-title{font-weight:bold;font-size:15px;padding:20px 20px 15px 20px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-subtitle{font-weight:bold;font-size:13px;cursor:pointer;padding:10px 25px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-subtitle span.fas{float:right;padding-top:5px;cursor:pointer;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-grip{text-align:center;color:#ddd;height:20px;cursor:n-resize;margin:0 10px;padding:20px 0 15px 0;}
-!*.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents{margin-bottom:20px;}*!
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents.container-table{!*display:table;*!padding:0 30px;max-height:120px;overflow:auto;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents.container-table ul{display:table-row;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents.container-table ul li{display:table-cell;width:40px;height:30px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents.container-table ul li img{width:30px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-search{margin:0 25px 10px 25px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list.top-list{overflow:auto;max-height:300px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list.format{overflow:auto;max-height:50px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list.measure li{margin:3px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list.measure li.selected{background-color:#b2ebf2;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list .filter select{border-color:#444;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list .filter label{font-size:10px;color:#444;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list .filter div{margin:20px 5px 10px 5px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list .filter div input.startDate{margin-bottom:10px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel .panel-contents .container-list .filter.date-filter{margin:3px;padding:3px 10px;border:1px dashed #dddddd;border-radius:3px;}
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li span.option-field:hover,
-.container .main .contents.edit-mode .widget-edit-mode .widget-panel ul li ul.nested li:hover{color:#8f8f8f;text-decoration-line:underline;text-decoration-style:dotted;}
-
-*/
 
 /* scroll */
 ::-webkit-scrollbar {width:8px; border:3px solid transparent; background:transparent}
