--- a/project/analyticsDashboard/style.css
+++ b/project/analyticsDashboard/style.css
@@ -10,7 +10,8 @@
 
 html{font-family:var(--fontType);width:100%;height:100%;}
 body{margin:0px;font-size:var(--fontSize);width:100%;height:100%;}
-ul li, ol li{list-style-type:none;}
+ul li, ol li{list-style-type:none;color:inherit;}
+a{text-decoration:none;}
 input, select{font-family:var(--fontType);background-color:transparent;padding:5px;border:none;}
 input::placeholder{color:#cccccc;}
 input:focus, select:focus{outline:none;}
@@ -24,13 +25,13 @@ nav .header li.left{flex-shrink:0;width:50px;padding:15px 0px;background-color:#
 nav .header li.middle{flex-grow:1;padding:10px 20px;text-align:center;}
 nav .header li.middle.back{text-align:left;}
 nav .header li.middle.back:hover{color:var(--pointColor);}
-nav .header li.middle.back span{line-height:30px;cursor:pointer;}
+nav .header li.middle.back span{line-height:30px;cursor:pointer;color:#ffffff;}
 nav .header li.middle input{border-bottom:1px solid #ffffff;width:400px;color:#ffffff;}
 nav .header li.middle input::placeholder{color:#ffffff90;}
 nav .header li.right{flex-shrink:0;padding:10px 20px;display:flex;align-items:center;border-left:1px solid #ffffff30;}
 nav .header li.right span{margin-left:10px;cursor:pointer;}
 nav .dropdown{position:absolute;background-color:#ffffff;min-width:160px;overflow:auto;right:0;z-index:10000;margin-top:3px;border-radius:.25rem;border:1px solid #0000002e;}
-nav .dropdown a{color:#000;padding:12px;text-decoration:none;display:block}
+nav .dropdown a{color:#000;padding:12px;display:block}
 nav .dropdown a:hover{background-color:#00000005}
 
 .container{height:inherit;overflow:hidden;}
